--- a/resources/i18n/en-US/brls.json
+++ b/resources/i18n/en-US/brls.json
@@ -1,8 +1,8 @@
 {
     "hints": {
-        "ok": "确认",
-        "back": "返回",
-        "exit": "退出"
+        "ok": "Ok",
+        "back": "Back",
+        "exit": "Exit"
     },
 
     "crash_frame": {
@@ -13,3 +13,4 @@
         "save": "保存"
     }
 }
+
