Translate Chinese strings to English in translations.json

--- a/resources/i18n/en-US/translations.json
+++ b/resources/i18n/en-US/translations.json
@@ -1,18 +1,18 @@
 {
     "restore_backup_view": {
-        "title": "恢复备份",
-        "not_found_dialog_hint": "未找到备份文件！",
-        "not_found_dialog_text": "要执行恢复，请将备份文件放入\n{}\n\n请确保备份有效，因为它将覆盖主机的分区文件，可能导致 Switch 无法启动！",
-        "not_found_dialog_btn": "关闭",
-        "warning": "恢复该备份将覆盖所有相关文件！\n（你的存档会被保留）\n\n请确保备份有效，因为它将覆盖主机的分区文件，可能导致 Switch 无法启动！",
-        "working": "正在恢复…",
-        "complete": "备份已恢复！"
+        "title": "Restore backup",
+        "not_found_dialog_hint": "Restore file not found!",
+        "not_found_dialog_text": "To restore, please place your backup file into\n{}\n\nMake sure the backup is valid as it will overwrite the console's partition files and might cause your Switch to stop booting!",
+        "not_found_dialog_btn": "close",
+        "warning": "Restoring this backup WILL overwrite all files!\n(Your saves will be preserved)\n\nMake sure the backup is valid as it will overwrite the console's partition files and might cause your Switch to stop booting!",
+        "working": "Restoring...",
+        "complete": "Backup restored!"
     },
     "create_backup_view": {
-        "title": "手动创建备份",
-        "warning": "所有的关联/取消关联操作都会在更改前自动创建备份！\n\n仅当你需要手动创建备份时才使用此选项。",
-        "working": "正在备份…",
-        "complete": "备份已创建！"
+        "title": "Create manual backup",
+        "warning": "All linking and unlinking operations will produce a backup before making changes!\n\nYou should only use this option if you want to manually create a backup.",
+        "working": "Backing up...",
+        "complete": "Backup created!"
     },
     "link_accounts_view": {
         "title": "Link selected accounts",
@@ -21,35 +21,35 @@
         "complete": "Accounts linked!"
     },
     "unlink_accounts_view": {
-        "title": "取消关联所选账户",
-        "warning": "取消关联会更改用户账户状态。\n（你的存档会被保留）\n\n如果所选账户存在 NNID 关联，它将被移除！",
-        "working": "正在取消关联…",
-        "complete": "账户已取消关联！"
+        "title": "Unlink selected accounts",
+        "warning": "Unlinking will change users accounts.\n(Your saves will be preserved)\n\nIf any of the selected accounts had a NNID link, it will be erased!",
+        "working": "Uninking...",
+        "complete": "Accounts unlinked!"
     },
     "country_select_view": {
-        "title": "选择关联账户的国家/地区"
+        "title": "Select country for linked accounts"
     },
-    "account_select_view": {
-        "title": "选择要关联/取消关联的账户",
-        "select_all": "全选",
-        "unselect_all": "取消全选",
-        "selected_count": "已选择 {}/{}",
-        "extra_info": "找到 {} 个账户\n重启到Payload {}",
-        "reboot_payload_disabled": "已禁用",
-        "reboot_payload_inactive": "未激活（未找到 {}）",
-        "reboot_payload_active": "已激活"
+     "account_select_view": {
+        "title": "Select accounts to link/unlink",
+        "select_all": "Select all",
+        "unselect_all": "Unselect all",
+        "selected_count": "{}/{} selected",
+        "extra_info": "Found {} account{}\nReboot to payload {}",
+        "reboot_payload_disabled": "disabled",
+        "reboot_payload_inactive": "inactive ({} not found)",
+        "reboot_payload_active": "active"
     },
     "account_list_item": {
-        "linked": "已关联",
-        "not_linked": "未关联"
+        "linked": "Linked",
+        "not_linked": "Not linked"
     },
     "confirm_view": {
-        "continue": "继续",
-        "back": "返回",
-        "reboot": "重启",
-        "reboot_to_payload": "重启到Payload"
+        "continue": "Continue",
+        "back": "Back",
+        "reboot": "Reboot",
+        "reboot_to_payload": "Reboot to payload"
     },
     "errors": {
-        "no_accounts_selected": "未选择任何账户！"
+        "no_accounts_selected": "No accounts selected!"
     }
 }
