--- a/resources/i18n/en-US/brls.json
+++ b/resources/i18n/en-US/brls.json
@@ -6,11 +6,12 @@
     },
 
     "crash_frame": {
-        "button": "确认"
+        "button": "OK"
     },
 
     "thumbnail_sidebar": {
-        "save": "保存"
+        "save": "Save"
     }
 }
+
 
