--- a/lib/borealis/resources/i18n/en-US/brls.json
+++ b/lib/borealis/resources/i18n/en-US/brls.json
@@ -1,15 +1,15 @@
 {
     "hints": {
-        "ok": "确认",
-        "back": "返回",
-        "exit": "退出"
+        "ok": "Ok",
+        "back": "Back",
+        "exit": "Exit"
     },
 
     "crash_frame": {
-        "button": "确认"
+        "button": "OK"
     },
 
     "thumbnail_sidebar": {
-        "save": "保存"
+        "save": "Save"
     }
 }
