--- a/lib/borealis/resources/i18n/es/brls.json
+++ b/lib/borealis/resources/i18n/es/brls.json
@@ -1,8 +1,8 @@
 {
     "hints": {
-        "ok": "Ok",
-        "back": "Back",
-        "exit": "Exit"
+        "ok": "OK",
+        "back": "Volver",
+        "exit": "Salir"
     },
 
     "crash_frame": {
@@ -10,6 +10,6 @@
     },
 
     "thumbnail_sidebar": {
-        "save": "Save"
+        "save": "Guardar"
     }
 }
